# quant_agent

./: .env.example  .gitignore  600000.u.csv  README-zh.md  README.md  fetch.py  main.py  pyproject.toml
.data/cn/: fetch.py
.data/cn/BSE/: meta
.data/cn/CFFEX/: meta
.data/cn/CZCE/: meta
.data/cn/DCE/: meta
.data/cn/GFEX/: meta
.data/cn/HKEX/: meta
.data/cn/SHFE/: meta
.data/cn/SSE/: meta
.data/cn/SZSE/: meta
download/: bao.py  convert.py
qa/: __init__.py
qa/broker/: md_api.py  td_api.py
qa/broker/hacker/: __init__.py  md_api.py  td_api.py
qa/broker/sim/: __init__.py  md_api.py  td_api.py
qa/core/: account.py  async_logger.py  const.py  event.py  helpers.py  logs.py  pair.py  proto.py  strategy.py  utility.py  zone.py
qa/core/adapter/: __init__.py  md_spi.py  td_spi.py
qa/core/broker/: __init__.py  md_adaptor.py  td_adaptor.py
qa/core/event_source/: csv.py  trading_signal.py
qa/core/meta/: __init__.py  account.py  bar.py  order.py  position.py  tick.py  trade.py
qa/gallary/: __init__.py  bbands.py  dmac.py  ma_strategy.py  rsi.py
qa/proto/fbs/: Account.py  Bar.py  Order.py  Position.py  Tick.py  Trade.py
qa/proto/fbs/schema/: account.fbs  bar.fbs  order.fbs  position.fbs  tick.fbs  trade.fbs
quant/: FinZone.py  MdWorker.py  TradeWorker.py  __init__.py
quant/galaxy/: MAStrategy.py
quant/impl/: ZMdWorker.py  ZTradeWorker.py
serv.d/: run.py
serv.d/app/: factory.py
serv.d/app/api/: router.py  stock.py
serv.d/schema/: create.sql
