[project]
name = "quant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "baostock>=0.8.9",
    "numpy>=2.3.5",
    "sanic>=25.12.0",
    "ta-lib>=0.6.8",
    "talipp>=2.7.0",
    "xlrd>=2.0.2",
]
