[project]
name = "quant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baostock>=0.8.9",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "numpy>=2.3.5",
    "ta-lib>=0.6.8",
    "talipp>=2.7.0",
    "tqdm>=4.67.3",
    "xtquant>=250516.1.1",
]
